# polkaward

./: .gitignore  Cargo.toml  LICENSE  README.md  env.sample  incrementer.contract  package.json
frontend/: package.json
frontend/server/: contract.cjs  contract_test.cjs  github.cjs  server.cjs
frontend/src/: App.tsx  main.tsx
src/: contract.js  github.js  server.js
