[package]
name = "incrementer"
version = "6.0.0-beta.1"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"
publish = false

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []

[package.metadata.ink-lang]
abi = "ink"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(ink_abi, values("ink", "sol", "all"))'
]
